# local-transcription-mcp--parakeet-tdt-0.6b-v2--

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  server.py
api/: main.py
frontend/: package.json  pnpm-lock.yaml
frontend/apps/web/src/: App.tsx
frontend/apps/web/src/components/: HardwareInfo.tsx  ModelInfo.tsx  TranscriptionForm.tsx
frontend/apps/web/src/lib/: api.ts
src/: audio_converter.py  transcriber.py
src/models/: transcription_models.py
src/transcription_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: file_utils.py  formatting_utils.py
tests/: conftest.py  test_server_tools.py  test_transcriber.py
